--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,18 @@
     	<maven.compiler.source>11</maven.compiler.source>
 	</properties>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.junit</groupId>
+				<artifactId>junit-bom</artifactId>
+				<version>5.10.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.opencsv</groupId>
@@ -48,12 +60,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-
-		<dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>javax.servlet-api</artifactId>
-		    <version>4.0.1</version>
 		</dependency>
 
 		<dependency>
@@ -84,13 +90,13 @@
 
 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-engine</artifactId>
+		    <artifactId>junit-jupiter</artifactId>
 		    <scope>test</scope>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.mockito</groupId>
-		    <artifactId>mockito-core</artifactId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
 		    <scope>test</scope>
 		</dependency>
 
